--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,9 +1,9 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2011.07.12
+-- wren ng thornton <wren@community.haskell.org>    ~ 2012.01.06
 ----------------------------------------------------------------
 
 Name:           pointless-fun
-Version:        1.0.0.1
+Version:        1.1.0
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren ng thornton
@@ -20,7 +20,7 @@ Description:    Some common point-free combinators.
 -- and source-repository:.
 Cabal-Version:  >= 1.6
 Build-Type:     Simple
-Tested-With:    GHC == 6.12.1
+Tested-With:    GHC == 6.12.1, GHC == 6.12.3
 
 Source-Repository head
     Type:     darcs
