--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,12 +1,17 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2012.01.28
+-- wren ng thornton <wren@community.haskell.org>    ~ 2012.02.08
 ----------------------------------------------------------------
 
+-- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
+-- and source-repository:.
+Cabal-Version:  >= 1.6
+Build-Type:     Simple
+
 Name:           pointless-fun
-Version:        1.1.0.1
+Version:        1.1.0.2
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
-Author:         wren ng thornton
+Author:         wren ng thornton, Matt Hellige
 Maintainer:     wren@community.haskell.org
 Copyright:      Copyright (c) 2009--2012 wren ng thornton
 License:        BSD3
@@ -16,12 +21,10 @@ Category:       Combinators, Composition, Utils
 Synopsis:       Some common point-free combinators.
 Description:    Some common point-free combinators.
 
--- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
--- and source-repository:.
-Cabal-Version:  >= 1.6
-Build-Type:     Simple
-Tested-With:    GHC == 6.12.1, GHC == 6.12.3
-
+Tested-With:
+    GHC == 6.12.1, GHC == 6.12.3
+Extra-source-files:
+    README, VERSION
 Source-Repository head
     Type:     darcs
     Location: http://community.haskell.org/~wren/pointless-fun
