--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2012.02.08
+-- wren ng thornton <wren@community.haskell.org>    ~ 2013.01.10
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -8,12 +8,12 @@ Cabal-Version:  >= 1.6
 Build-Type:     Simple
 
 Name:           pointless-fun
-Version:        1.1.0.2
+Version:        1.1.0.3
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren ng thornton, Matt Hellige
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2009--2012 wren ng thornton
+Copyright:      Copyright (c) 2009--2013 wren ng thornton
 License:        BSD3
 License-File:   LICENSE
 
@@ -22,7 +22,7 @@ Synopsis:       Some common point-free combinators.
 Description:    Some common point-free combinators.
 
 Tested-With:
-    GHC == 6.12.1, GHC == 6.12.3
+    GHC == 6.12.1, GHC == 6.12.3, GHC == 7.6.1
 Extra-source-files:
     README, VERSION
 Source-Repository head
