.cabal: nudged for GHC 7.8
Ignore-this: f40aec563db535be18479aae4fdf8637

darcs-hash:0269b54128705309b7328790e41c398a8c1e8a8d

--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2013.01.10
+-- wren ng thornton <wren@community.haskell.org>    ~ 2014.03.07
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -8,7 +8,7 @@ Cabal-Version:  >= 1.6
 Build-Type:     Simple
 
 Name:           pointless-fun
-Version:        1.1.0.3
+Version:        1.1.0.4
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren ng thornton, Matt Hellige
@@ -22,7 +22,7 @@ Synopsis:       Some common point-free combinators.
 Description:    Some common point-free combinators.
 
 Tested-With:
-    GHC == 6.12.1, GHC == 6.12.3, GHC == 7.6.1
+    GHC ==6.12.1, GHC ==6.12.3, GHC ==7.6.1, GHC ==7.8.2
 Extra-source-files:
     README, VERSION
 Source-Repository head
