--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren ng thornton <wren@community.haskell.org>    ~ 2014.03.30
+-- wren gayle romano <wren@community.haskell.org>   ~ 2014.03.30
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -11,9 +11,9 @@ Name:           pointless-fun
 Version:        1.1.0.5
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
-Author:         wren ng thornton, Matt Hellige
+Author:         wren gayle romano, Matt Hellige
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2009--2013 wren ng thornton
+Copyright:      Copyright (c) 2009--2013 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
