--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren gayle romano <wren@community.haskell.org>   ~ 2014.03.30
+-- wren gayle romano <wren@community.haskell.org>   ~ 2015.05.30
 ----------------------------------------------------------------
 
 -- By and large Cabal >=1.2 is fine; but >= 1.6 gives tested-with:
@@ -8,12 +8,12 @@ Cabal-Version:  >= 1.6
 Build-Type:     Simple
 
 Name:           pointless-fun
-Version:        1.1.0.5
+Version:        1.1.0.6
 Stability:      provisional
 Homepage:       http://code.haskell.org/~wren/
 Author:         wren gayle romano, Matt Hellige
 Maintainer:     wren@community.haskell.org
-Copyright:      Copyright (c) 2009--2013 wren gayle romano
+Copyright:      Copyright (c) 2009--2015 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
@@ -24,7 +24,7 @@ Description:    Some common point-free combinators.
 Tested-With:
     GHC ==6.12.1, GHC ==6.12.3, GHC ==7.6.1, GHC ==7.8.0
 Extra-source-files:
-    README, VERSION
+    README, CHANGELOG
 Source-Repository head
     Type:     darcs
     Location: http://community.haskell.org/~wren/pointless-fun
