--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -1,5 +1,5 @@
 ----------------------------------------------------------------
--- wren gayle romano <wren@community.haskell.org>   ~ 2021.10.16
+-- wren gayle romano <wren@cpan.org>                ~ 2021.10.17
 ----------------------------------------------------------------
 
 -- Cabal >=1.10 is required by Hackage.
@@ -9,10 +9,11 @@ Build-Type:     Simple
 Name:           pointless-fun
 Version:        1.1.0.7
 Stability:      provisional
-Homepage:       http://wrengr.org
+Homepage:       https://wrengr.org/software/hackage.html
+Bug-Reports:    https://github.com/wrengr/pointless-fun/issues
 Author:         wren gayle romano, Matt Hellige
 Maintainer:     wren@cpan.org
-Copyright:      Copyright (c) 2009--2021 wren gayle romano
+Copyright:      Copyright (c) 2009–2021 wren gayle romano
 License:        BSD3
 License-File:   LICENSE
 
