--- a/pointless-fun.cabal
+++ b/pointless-fun.cabal
@@ -6,7 +6,7 @@ Cabal-Version:  2.2
 --    <https://github.com/haskell/cabal/issues/4899>
 
 ----------------------------------------------------------------
--- wren gayle romano <wren@cpan.org>                ~ 2024.04.05
+-- wren gayle romano <wren@cpan.org>                ~ 2024-08-29
 ----------------------------------------------------------------
 
 Name:           pointless-fun
@@ -17,7 +17,7 @@ Homepage:       https://wrengr.org/software/hackage.html
 Bug-Reports:    https://github.com/wrengr/pointless-fun/issues
 Author:         wren gayle romano, Matt Hellige
 Maintainer:     wren@cpan.org
-Copyright:      2009–2022 wren romano
+Copyright:      2009–2024 wren romano
 -- Cabal-2.2 requires us to say "BSD-3-Clause" not "BSD3"
 License:        BSD-3-Clause
 License-File:   LICENSE
@@ -41,8 +41,9 @@ Tested-With:
     GHC ==9.0.1,
     GHC ==9.2.4,
     GHC ==9.4.8,
-    GHC ==9.6.4,
-    GHC ==9.8.1
+    GHC ==9.6.5,
+    GHC ==9.8.2,
+    GHC ==9.10.1
 
 ----------------------------------------------------------------
 Source-Repository head
